2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.h: Replace HAVE_UTMPX_H by USE_UTMPX.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/rlogin.c: Replace atoi() by getulong().

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.c: Replace HAVE_UTMPX_H by USE_UTMPX.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/chkname.c: Do not include <utmp.h> and <utmpx.h>. There
	are no more needed.

2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/limits.c: Replace strtol() by getlong().
	* libmisc/limits.c: Replace HAVE_UTMPX_H by USE_UTMPX.

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* man/groupmod.8.xml, man/usermod.8.xml, man/groupadd.8.xml,
	man/useradd.8.xml: Added note to warn about insecurity in using
	--password.
	* man/groupmod.8.xml: Removed not regarding default if --password
	is not used. This was a cut&paste from groupadd.8.xml.
	* man/passwd.1.xml: Split some paragraphs.
	* man/passwd.1.xml: Recommend other encryption methods than DES.

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Move update_utmp() after the PID or session ID
	changed in order to get more accurate data in UTMP. This also
	fixes "exec login" when login in installed setuid.

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Reuse a string and avoid an untranslated message
	"Login incorrect".

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Replace HAVE_UTMPX_H by USE_UTMPX.
	* src/login.c: Avoid name clash between global variables and the
	update_utmp() arguments.

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c, lib/commonio.c, lib/groupio.c: Added missing
	include of <assert.h>

2009-04-27  Nicolas François  <nicolas.francois@centraliens.net>
