@@ -1,5 +1,9 @@
 2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/lastlog.c: Replace atoi() by getulong().
+
+2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* libmisc/failure.h: Replace HAVE_UTMPX_H by USE_UTMPX.
 
 2009-04-28  Nicolas François  <nicolas.francois@centraliens.net>
